@@ -54,7 +54,7 @@ using System.Runtime.CompilerServices;
 // You can specify all the values or you can default the Revision and Build Numbers 
 // by using the '*' as shown below:
 
-[assembly: AssemblyVersion("2.10.3.6")]
+[assembly: AssemblyVersion("2.10.3.5")]
 
 //
 // In order to sign your assembly you must specify a key to use. Refer to the 
